# nemo-qml-plugin-sortfiltermodel

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  plugin.cpp  qmldir  sortfiltermodel.cpp
